//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.echo;

import "google/protobuf/any.proto";

//
// ECHO
//

// Vector timestamp used to order messages.
message TimeframeVector {
  message Frame {
    // TODO(marik-d): Compress using numeric feed indexes.
    // TODO(burdon): Determine if admit DAG can be ordered. Requires party messages to be ordered (by lexical feed key).
    bytes feedKey = 1;
    int32 seq = 3;
  }

  repeated Frame frames = 1;
}

// Wrapper for all ECHO messages.
message EchoEnvelope {
  string itemId = 1;
  TimeframeVector timeframe = 2;

  // Create item.
  ItemGenesis genesis = 10;

  // Item system mutations.
  ItemMutation itemMutation = 11;

  // User model mutations.
  bytes mutation = 12;
}

// Item creation.
message ItemGenesis {
  string itemType = 1;
  string modelType = 2;
  string modelVersion = 3;
}

// TODO(burdon): Support typed links.
message ItemMutation {
  string parentId = 1;
}
